# snowflake-dbt-demo

./: .env.example  .gitattributes  .gitignore  .markdownlint.json  .markdownlint.yaml  .markdownlintignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.yaml  .sqlfluff  .sqlfluffignore  AGENTS.md  DBT_BEST_PRACTICES.md  DBT_SETUP_GUIDE.md  DEPLOYMENT_SCRIPT.md  README.md  azure-pipelines.yml  dbt-conda-env-beta.yml  dbt-conda-env.yml  dbt_project.yml  deploy_dbt_project.py  devops_deploy_dbt_project.yml  packages.yml  profiles.yml  profiles.yml.sample  profiles2.yml  pyproject.toml  requirements.txt  sample_sqlserver_etl_procedures.sql
.claude/: README.md  settings.local.json
.claude/agents/: dbt-deployer.md  dbt-deployment-agent.md  dbt-developer.md  dbt-development-agent.md  dbt-migration-agent.md  dbt-migrator.md  (+2 more)
.claude/hooks/dbt-validation/: README.md  pyproject.toml  validate_dbt_file.py
.claude/hooks/dbt-validation/src/dbt_validation/: __init__.py  check_migration_status.py  cli.py
.claude/hooks/dbt-validation/src/dbt_validation/core/: __init__.py  base.py
.claude/hooks/dbt-validation/src/dbt_validation/migration/: __init__.py  checker.py
.claude/hooks/dbt-validation/src/dbt_validation/sql/: __init__.py  cte_rules.py  naming_rules.py  syntax_rules.py  validator.py
.claude/hooks/dbt-validation/src/dbt_validation/yaml/: __init__.py  validator.py
.claude/hooks/dbt-validation/tests/: __init__.py  conftest.py  test_integration_cli.py  test_integration_migration.py  test_integration_sql.py  test_integration_yaml.py  test_unit_core.py  test_unit_migration.py  test_unit_sql.py  test_unit_yaml.py
.claude/skills/doc-scraper/: .gitignore  SKILL.md  pyproject.toml  requirements.txt
.claude/skills/doc-scraper/scripts/: __init__.py  doc-scraper.py  doc_scraper.py  scraper_config.yaml
.claude/skills/skills-sync/: SKILL.md  pyproject.toml
.claude/skills/skills-sync/scripts/: __init__.py  skills_sync.py  sync-skills.py  sync-skills.ts
.cursor/: mcp.json
.devcontainer/: .gitignore
.skills/: .gitignore  repos.txt  skills.yaml
deploy_config/: profiles.yml
docker/: profiles.yml  sample.env
exposures/: executive_dashboard_exposure.yml
macros/: copy_log_to_snowflake.sql  create_masking_policies.sql  get_nextval.sql  get_scd_sql.sql  greatest_date.sql  iceberg_table_support.sql  insert_ghost_key.sql  sequence_nextval_as_surrogate_key.sql  snowflake_dynamic_warehouses.sql  snowflake_ephemeral_result_scan.sql.new  snowflake_get_sequence.sql  snowflake_get_stream.sql  snowflake_integration_key.sql  snowflake_optimized_snapshot_hash_arguments.sql  snowflake_query_tags.sql  snowflake_refresh_dynamic_table.sql  snowflake_result_scan_table_materialization.sql.new  snowflake_sequences.sql  snowflake_sequences.yml  snowflake_snapshot_improvements.sql  snowflake_snapshot_improvements.sql.bak  snowflake_surrogate_key.sql  tag_columns.sql  useful_snowflake_functions.yml
models/: README.md
seeds/: dynamic_warehouse_assignment_overrides.csv  dynamic_warehouses.csv
skills-mcp-server/: .gitignore  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PUBLISHING.md  README.md  READY_TO_TEST.md  TESTING.md  demo_skills_catalog.py  mcp.json.example  package-lock.json  package.json  pytest.ini  requirements.txt  setup.py  test_mcp_endpoints.py  tsconfig.json  vitest.config.ts
(+1627 files in other folders)
