[project]
name = "snowflake-doc-scraper"
version = "1.1.0"
description = "AI-powered web scraper for extracting and organizing Snowflake documentation"
readme = "SKILL.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "ratelimit>=2.2.1",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "markdownify>=0.11.6",
    "pyyaml>=6.0",
    "python-frontmatter>=1.0.0",
    "click>=8.1.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "pylint>=2.17.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
]

[project.scripts]
doc-scraper = "scripts.doc_scraper:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
